application.properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=CRUDtelephony
+spring.profiles.active=${ACTIVE_PROFILE:dev}
+
+#PSQL conf
+spring.jpa.show-sql=true
+spring.datasource.url=${POSTGRESQL_URL}
+spring.datasource.username=${POSTGRESQL_USERNAME}
+spring.datasource.password=${POSTGRESQL_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#MongoDB conf
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.jpa.hibernate.ddl-auto=update
