--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #MongoDB conf
 spring.data.mongodb.uri=${MONGODB_URI}
 spring.jpa.hibernate.ddl-auto=update
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
